[gd_scene load_steps=4 format=3 uid="uid://ciemde2c7om0g"]

[ext_resource type="Script" uid="uid://bgfwq7u1kif5" path="res://Towers/turret_body.gd" id="1_k8blp"]
[ext_resource type="Texture2D" uid="uid://byswovvceeejr" path="res://Tilesheet/PNG/towerDefense_tile249.png" id="2_74u2r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_praf1"]
radius = 50.55

[node name="TurretBody" type="StaticBody2D"]
script = ExtResource("1_k8blp")

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_praf1")

[node name="Body" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_74u2r")

[node name="FirePoint1" type="Marker2D" parent="."]
position = Vector2(39, 0)

[node name="Projectiles" type="Node2D" parent="."]

[node name="AttackCD" type="Timer" parent="."]

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="timeout" from="AttackCD" to="." method="_on_attack_cd_timeout"]
